@@ -1,7 +1,7 @@
 # -*- coding:utf-8 -*-
 
 
-__version__ = "0.3.0"
+__version__ = "0.3.1.b2"
 
 
 import os
